2003-07-09  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* mod_vlad.c :
	* mod_vlad.h :

	  - Use pool userdata to prevent post_config() to be run in the first
	    call.

	* admin.c :
	* admin.h :
	* mod_vlad.c :
	* mod_vlad.h :
	* proc.c :
	* proc.h :

	  - Created new structure to hold pipe fds and mutex. Functions in
	    proc now uses this new structure to pass ipc info around.

	  - Some cleanup.

	* configure.ac :
	* configure :
	* Makefile.in :

	  - Now the -fPIC flag gets passed on to gcc properly.

2003-07-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* admin.c :
	* proc.c :
	* proc.h :

	  - Manupulator gui now shows a sorted table of identifiers.

	  - Now manipulator gui shows sequences and transformations with
	    parameters.

	* mod_vlad.c :
	* proc.c :
	* proc.h :

	  - Added protection from misconfiguration: Requests are preceded by
	    a call to modvlad_check which checks whether the server process
	    is alive and the kb within is non-null.

	* mod_vlad.c :

	  - Added child_init hook to initialize child mutex and random seed.

	* util.c :

	  - Now properly generates a pseudo random number for id.

	* proc.c :

	  - Fixed bug that prevented transformations with more than one
	    parameter from working.

2003-07-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* mod_vlad.c :
	* proc.c :
	* proc.h :

	  - Added message + functions to allow module to send out a NOT FOUND
	    error code when the file requested does not exists.

	* proc.c :
	* util.c :
	* util.h :

	  - Added a message id (random number) in every pipe message for
	    concurrency testing.

	* proc.c :

	  - Added error pipe messages.

	* mod_vlad.h :

	  - Added basic error codes.

	* config.h.in :
	* configure :
	* configure.ac :

	  - Added a config.h in for variables version and debug.

2003-07-04  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* admin.c :
	* mod_vlad.c :
	* mod_vlad.h :
	* proc.c :
	* proc.h :
	* util.c :
	* util.h :
