@@ -1,3 +1,13 @@
+2003-07-24  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
+
+	* admin.c :
+
+	  - Litte HTML fix.
+
+	* proc.c :
+
+	  - Fix that prevented addition of no-parameter transformations.
+
 2003-07-09  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
 	* mod_vlad.c :
